--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,11 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity" android:background="#e9e9e9">
+        tools:context=".Register" android:background="#e9e9e9">
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
@@ -13,7 +12,7 @@
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.31"/>
+            app:layout_constraintVertical_bias="0.22000003"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,25 +28,39 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/password" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/login" android:layout_marginStart="8dp"
+            android:id="@+id/email" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="Email"
+            android:drawableLeft="@android:drawable/sym_action_email"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/login"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/password"
+            android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:hint="Hasło"
-            android:drawableLeft="@android:drawable/ic_lock_idle_lock"/>
-    <TextView
-            android:text="REJESTRACJA"
+            android:drawableLeft="@android:drawable/ic_lock_idle_lock" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/email"/>
+    <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/register"
-            android:onClick="goToRegister" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/loginButton" android:layout_marginStart="8dp"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/password2"
+            android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" android:hint="Powtórz hasło"
+            android:drawableLeft="@android:drawable/ic_lock_idle_lock" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/password"/>
     <Button
-            android:text="Zaloguj się"
+            android:text="Zarejestruj się"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/loginButton" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/registerButton" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/password2" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
