--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -37,7 +37,7 @@
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/password"
             android:layout_marginStart="8dp"
@@ -48,19 +48,19 @@
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/password2"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:hint="Powtórz hasło"
             android:drawableLeft="@android:drawable/ic_lock_idle_lock" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/password"/>
+            app:layout_constraintTop_toBottomOf="@+id/password" android:inputType="textPassword"/>
     <Button
             android:text="Zarejestruj się"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/registerButton" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/password2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:onClick="register"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
