--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,5 +20,5 @@
             android:layout_height="wrap_content"
             android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView" android:onClick="test"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
